<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16">

    <TextView
        android:id="@+id/deleteHeaderTxtView"
        style="@style/text_18_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_12"
        android:gravity="center_horizontal"
        android:text="@string/delete_country_header"
        app:layout_constraintBottom_toTopOf="@id/deleteDescriptionTxtView"
        app:layout_constraintEnd_toEndOf="@id/deleteBtn"
        app:layout_constraintStart_toStartOf="@id/deleteBtn" />

    <TextView
        android:id="@+id/deleteDescriptionTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8"
        android:gravity="center_horizontal"
        android:text="@string/delete_country_description"
        android:textSize="@dimen/text_16"
        app:layout_constraintBottom_toTopOf="@id/deleteBtn"
        app:layout_constraintEnd_toEndOf="@id/deleteBtn"
        app:layout_constraintStart_toStartOf="@id/deleteBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/delete_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/notNowBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notNowBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:backgroundTint="@color/grey_light"
        android:text="@string/delete_abort_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>